# textual-serve-asgi

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: default.py  mounted.py
textual_serve_asgi/: __init__.py  __main__.py  app_service.py  server.py
textual_serve_asgi/static/css/: xterm.css
textual_serve_asgi/static/js/: textual.js
textual_serve_asgi/templates/: app_index.html
