[project]
name = "textual-serve-asgi"
version = "0.1.0"
description = "ASGI adapter for Textual Serve"
authors = [
    { name = "Yurii Karabas", email = "1998uriyyo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "starlette>=0.52.1",
    "textual-serve>=1.1.3",
]

[project.optional-dependencies]
server = [
  "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[project.urls]
Repository = "https://github.com/uriyyo/textual-serve-asgi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "ALL",  # select all checks by default
]
ignore = [
    # single rule exclude
    "F821",  # allow use Any
    "PLC0415",  # allow local import
    "ANN401",  # allow to use Any in type annotations
    "COM812",  # will be handled by ruff format

    # full rule exclude
    "D",  # docstring rules
    "FBT",  # ignore boolean trap rules
    "TRY",  # ignore try/except suggestions
    "EM",   # ignore some error message suggestions
    "TC",   # ignore type checking rules
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
]
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10
